# double_linked_list

./: .gitlab-ci.yml  CMakeLists.txt  Doxyfile
src/: list.hpp  main.cpp  merge.hpp
src/tests/: list_test.cpp  list_test.hpp
